# sb1-11c5s2

./: README.md  pyproject.toml
src/: main.py  santa_solver.py
src/data/: data_handler.py
src/models/: sequence_scorer.py
src/optimizers/: sequence_optimizer.py
