[tool.poetry]
name = "santa-solver"
version = "0.1.0"
description = "Solution for Santa 2024 Perplexity Permutation Puzzle"
authors = ["Kolapo Adedipe <adedipebabatundekolapo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"